<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DwellersBeGood</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_title">game title</string>
    <string name="main_menu_buttonSingle">Single player</string>
    <string name="main_menu_buttonMulti">Multi Player</string>
    <string name="main_menu_buttonSettings">Settings</string>
    <string name="title_activity_multiplayer_connection">MultiplayerConnectionActivity</string>
    <string name="connection_buttonHost">Host</string>
    <string name="connection_buttonJoin">Join</string>
    <string name="multiplayer_title">multiplayer</string>
    <string name="title_activity_search_devices">Choose a device</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="search_devices_title">Paired Devices:</string>
    <string name="search_devices_available_text">Devices available:</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="main_menu_buttonQuit">Quit</string>

</resources>
